first-css optimization

--- a/Intro.html
+++ b/Intro.html
@@ -4,67 +4,20 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-	<style type="text/css">
-		body{
-			overflow-y: hidden;
-			font-family: "helvetica";
-		}
-		#container{
-			margin: 100px auto;
-			width: 800px;
-			height: 500px;
-		}
-		#robot{
-			margin-top: 80px;
-			float: left;
-		}
-		#display{
-			width: 300px;
-			height: 150px;
-			background-color: #F39878;
-			border: 2px #EA6648 solid;
-			margin-top: ;
-			float: left;
-			border-radius: 30px;
-			text-align: center;
-			line-height: 150px;
-			font-size: 22px;
-		}
-
-		#btn{
-			height: 50px;
-			width: 50px;
-			background-color: #9DE981;
-			border-radius: 100px;
-			border:2px #7EC87C solid ;
-			float: left;
-			line-height: 50px;
-			text-align: center;
-			margin: 250px 10px;
-			margin-left: -200px;
-
-		}
-		#btn:hover{
-			background-color: #3F6B3E;
-			color: white;
-			border:2px #7EC87C #9DE981 ;
-		}
-
-	</style>
-
+	<title>Introduction</title>
+<link rel="stylesheet" href="css/intro.css">
+<link rel="stylesheet" href="css/base.css">
 </head>
 <body>
 
-<section id="container">
-	<figure><img id="robot" src="img/coilbot.png" width="200px" height="300px"></figure>
+<section class="container">
+	<figure><img class="coilrobot" id="robot" src="img/coilbot.png" ></figure>
 
 
+	<section class="text-boxes">
 	<div id="display">Introduction Text</div>
-
-
-	<a href="gamePlay.html"><div id="btn">OK</div></a>
-		
+	<a href="gamePlay.html"><div class="ok" id="btn">OK</div></a>
+	</section>	
 
 </section>
 
