--- a/gamePlay.html
+++ b/gamePlay.html
@@ -4,29 +4,34 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>game-play</title>
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 
 </head>
 <body>
 
-<section id="container">
+<section class="container">
 
 
 
 
-
+	<section class="timer-box">
 	<div id="countdown"></div>
 	<div id="clickCount">0</div>
-	<figure><img id="robot" src="img/coilbot2.png" width="200px" height="300px"></figure>
+	</section>
 
+	<section class="all-content">
+	<figure><img class="coilrobot" src="img/coilbot2.png" width="200px" height="300px"></figure>
 
-	<div id="display">Introduction Text</div>
+		<section class="text-only">
+		<div id="display">Introduction Text</div>
 
-	<section id="box">
-		<div id="nextButtonPlus" class="btn-true"><i class="fa fa-check" style="font-size:25px;color:white;padding-top:12px;"></i></div>
-		<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove " style="font-size:25px;color:white;padding-top:12px;"></i></div>	
-		<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward" style="font-size:25px;color:white;padding-top: 12px;"></i></div>	
+			<section class="next-btn" id="box">
+				<div id="nextButtonPlus" class="btn-true"><i class="fa fa-check" style="font-size:25px;color:white;padding-top:12px;"></i></div>
+				<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove " style="font-size:25px;color:white;padding-top:12px;"></i></div>	
+				<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward" style="font-size:25px;color:white;padding-top: 12px;"></i></div>	
+			</section>
+		</section>
 	</section>
 </section>
 <script type="text/javascript" src="js/task.js"></script>
