--- a/index.html
+++ b/index.html
@@ -3,37 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-	<style type="text/css">
-		body{
-			overflow-y: hidden;
-		}
-		#container{
-			margin: 200px auto;
-			width: 500px;
-			height: 500px;
-		}
-		button{
-			position: absolute;
-			top: 350px;
-			width: 200px;
-			height: 50px;
-			background-color: #F39878;
-			border: 2px #EA6648 solid;
-			border-radius: 5px;
-			font-size: 20px;
-		}
-		button:hover{
-			background-color: #EA6648;
-		}
-	</style>
+	<title>gameStart</title>
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/start-page.css">
 </head>
 <body>
 
 <section id="container">
 	<figure>
-		<a href="Intro.html"><button>Start Game</button></a>
-		<img src="img/coilbot.png" width="200px" height="300px"></figure>
+		<a class="startBtn" href="Intro.html">Start Game</a>
+		<img class="coilrobot" src="img/coilbot.png"></figure>
 		
 </section>
 
