--- a/Intro.html
+++ b/Intro.html
@@ -11,7 +11,7 @@
 <body>
 
 <section class="container">
-	<figure><img class="coilrobot" id="robot" src="img/coilbot.png" ></figure>
+	<figure><img class="coilrobot distort" id="robot" src="img/coilbot.png" ></figure>
 
 
 	<section class="text-boxes">
