--- a/gamePlay.html
+++ b/gamePlay.html
@@ -21,7 +21,7 @@
 	</section>
 
 	<section class="all-content">
-	<figure><img class="coilrobot" src="img/coilbot2.png" width="200px" height="300px"></figure>
+	<figure><img class="coilrobot distort" src="img/coilbot2.png" width="200px" height="300px"></figure>
 
 		<section class="text-only">
 		<div id="display">Introduction Text</div>
@@ -29,7 +29,8 @@
 			<section class="next-btn" id="box">
 				<div id="nextButtonPlus" class="btn-true"><i class="fa fa-check" style="font-size:25px;color:white;padding-top:12px;"></i></div>
 				<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove " style="font-size:25px;color:white;padding-top:12px;"></i></div>	
-				<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward" style="font-size:25px;color:white;padding-top: 12px;"></i></div>	
+				<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward" style="font-size:25px;color:white;padding-top: 12px;"></i></div>
+				<a href="index.html"><div id="backToHome" class="btn-home"><i class="fa fa-home" style="font-size:25px;color:white;padding-top: 12px;"></i></div>	</a>
 			</section>
 		</section>
 	</section>
