--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <section id="container">
 	<figure>
 		<a class="startBtn" href="Intro.html">Start Game</a>
-		<img class="coilrobot" src="img/coilbot.png"></figure>
+		<img class="coilrobot distort" src="img/coilbot.png"></figure>
 		
 </section>
 
