--- a/Intro.html
+++ b/Intro.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Introduction</title>
 <link rel="stylesheet" href="css/intro.css">
-<link rel="stylesheet" href="css/base.css">
+<!-- <link rel="stylesheet" href="css/base.css"> -->
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 
 	<section class="text-boxes">
 	<div id="display">Introduction Text</div>
-	<a href="gamePlay.html"><div class="ok" id="btn">OK</div></a>
+	<a href="gamePlay.html"><p class="ok" id="btn">OK</p></a>
 	</section>	
 
 </section>
