--- a/Intro.html
+++ b/Intro.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Introduction</title>
 <link rel="stylesheet" href="css/intro.css">
-<!-- <link rel="stylesheet" href="css/base.css"> -->
 </head>
 <body>
 
-<section class="container">
-	<figure><img class="coilrobot distort" id="robot" src="img/coilbot.png" ></figure>
-
-
-	<section class="text-boxes">
-	<div id="display">Introduction Text</div>
-	<a href="gamePlay.html"><p class="ok" id="btn">OK</p></a>
-	</section>	
-
-</section>
+	<section class="container">
+		<figure><img class="coilrobot distort" id="robot" src="img/coilbot.png" ></figure>
+		<section class="text-boxes">
+			<div id="display">Introduction Text<div id="speak" class="btn-speak"><i class="fa fa-volume-up"></i></div></div>
+			<a href="gamePlay.html"><p class="ok" id="btn">OK</p></a>
+		</section>	
+	</section>
 
 </body>
 </html>
