--- a/gamePlay.html
+++ b/gamePlay.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>game-play</title>
 	<link rel="stylesheet" type="text/css" href="css/base.css">
-
 </head>
 <body>
 
 <section class="container">
-
-
-
-
 	<section class="timer-box">
 	<div id="countdown"></div>
 	<div id="clickCount">0</div>
 	</section>
-
 	<section class="all-content">
 	<figure><img class="coilrobot distort" src="img/coilbot2.png" width="200px" height="300px"></figure>
-
 		<section class="text-only">
-		<div id="display">Introduction Text</div>
-
-			<section class="next-btn" id="box">
-				<div id="nextButtonPlus" class="btn-true"><i class="fa fa-check" style="font-size:25px;color:white;padding-top:12px;"></i></div>
-				<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove " style="font-size:25px;color:white;padding-top:12px;"></i></div>	
-				<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward" style="font-size:25px;color:white;padding-top: 12px;"></i></div>
-				<a href="index.html"><div id="backToHome" class="btn-home"><i class="fa fa-home" style="font-size:25px;color:white;padding-top: 12px;"></i></div>	</a>
-			</section>
+			<div id="speak" class="btn-speak"><i class="fa fa-volume-up"></i></div>
+			<div id="display">Introduction Text</div>
+				<section class="next-btn" id="box">
+					<div id="nextButtonPlus" class="btn-true"><i class="fa fa-check"></i></div>
+					<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove"></i></div>	
+					<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward"></i></div>
+					<a href="index.html"><div id="backToHome" class="btn-home"><i class="fa fa-home"></i></div>	</a>
+				</section>
 		</section>
 	</section>
 </section>
