--- a/Intro.html
+++ b/Intro.html
@@ -12,10 +12,11 @@
 	<section class="container">
 		<figure><img class="coilrobot distort" id="robot" src="img/coilbot.png" ></figure>
 		<section class="text-boxes">
-			<div id="display">Introduction Text<div id="speak" class="btn-speak"><i class="fa fa-volume-up"></i></div></div>
+			<div id="speak" class="btn-speak"><i class="fa fa-volume-up"></i></div>
+			<div id="display">Introduction Text</div>
 			<a href="gamePlay.html"><p class="ok" id="btn">OK</p></a>
 		</section>	
 	</section>
-
+	<script src="js/tts.js"></script>
 </body>
 </html>
