--- a/gamePlay.html
+++ b/gamePlay.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta charset="utf-8">
@@ -18,17 +18,18 @@
 	<figure><img class="coilrobot distort" src="img/coilbot2.png" width="200px" height="300px"></figure>
 		<section class="text-only">
 			<div id="speak" class="btn-speak"><i class="fa fa-volume-up"></i></div>
-			<div id="display">Introduction Text</div>
-				<section class="next-btn" id="box">
-					<div id="nextButtonPlus" class="btn-true"><i class="fa fa-check"></i></div>
-					<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove"></i></div>	
-					<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward"></i></div>
-					<a href="index.html"><div id="backToHome" class="btn-home"><i class="fa fa-home"></i></div>	</a>
-				</section>
+			<div id="display"></div>
+			<section class="next-btn" id="box">
+				<div id="nextButtonPlus" class="btn-true"><i class="fa fa-check"></i></div>
+				<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove"></i></div>	
+				<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward"></i></div>
+				<a href="index.html"><div id="backToHome" class="btn-home"><i class="fa fa-home"></i></div>	</a>
+			</section>
 		</section>
 	</section>
 </section>
 <script type="text/javascript" src="js/task.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/tts.js"></script>
 </body>
 </html>
