amounts of skips

--- a/gamePlay.html
+++ b/gamePlay.html
@@ -22,7 +22,7 @@
 			<section class="next-btn" id="box">
 				<div id="nextButtonPlus" class="btn-true"><i class="fa fa-check"></i></div>
 				<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove"></i></div>	
-				<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward"></i></div>
+				<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward"></i><div id="skipButtonCount"></div></div>
 				<a href="index.html"><div id="backToHome" class="btn-home"><i class="fa fa-home"></i></div>	</a>
 			</section>
 		</section>
