--- a/Intro.html
+++ b/Intro.html
@@ -13,7 +13,21 @@
 		<figure><img class="coilrobot distort" id="robot" src="img/coilbot.png" ></figure>
 		<section class="text-boxes">
 			<div id="speak" class="btn-speak"><i class="fa fa-volume-up"></i></div>
-			<div id="display">Introduction Text</div>
+			<div id="display">Welcome, challengers. 
+				I need your help. My evil twin has taken over and you have to defeat him.
+				<br><br>
+				Your mission?<br>
+				the Coilbot will challenge you with a series of tasks
+				<br><br>
+				You have 30 seconds per task, no more, no less. If a challenge seems too difficult, your team can use one of 3 precious skips—but use them wisely!
+				<br><br>
+				Fail 5 times, and the world is doomed!
+				But if you succeed in 10 challenges, victory will be yours!
+				<br><br>
+				Now... brace yourselves, for you are about to face the Coilbot!
+				<br><br>
+				You only have 8 minutes, ready? Let's face Coilbot's first challenge!
+				</div>
 			<a href="gamePlay.html"><p class="ok" id="btn">OK</p></a>
 		</section>	
 	</section>
