changes to game play, try again button

--- a/gamePlay.html
+++ b/gamePlay.html
@@ -24,6 +24,7 @@
 				<div id="nextButtonMin"  class="btn-false"><i class="fa fa-remove"></i></div>	
 				<div id="nextButtonSkip" class="btn-skip"><i class="fa fa-forward"></i><div class="btn-amount-of-skip" id="skipButtonCount"></div></div>
 				<a href="index.html"><div id="backToHome" class="btn-home"><i class="fa fa-home"></i></div>	</a>
+				<a href="index.html" id="restartGameId" hidden="true">Try again?</a>
 			</section>
 		</section>
 	</section>
