--- a/gamePlay.html
+++ b/gamePlay.html
@@ -14,6 +14,9 @@
 	<div id="countdown"></div>
 	<div id="clickCount">0</div>
 	</section>
+	<audio autoplay loop muted controls>
+		<source src="punky-troll.mp3"> 
+	</audio>
 	<section class="all-content">
 	<figure><img class="coilrobot distort" src="img/coilbot2.png" width="200px" height="300px"></figure>
 		<section class="text-only">
