--- a/gamePlay.html
+++ b/gamePlay.html
@@ -14,7 +14,7 @@
 	<div id="countdown"></div>
 	<div id="clickCount">0</div>
 	</section>
-	<audio autoplay loop muted controls>
+	<audio loop controls>
 		<source src="punky-troll.mp3"> 
 	</audio>
 	<section class="all-content">
